# bowling-lane-management

./: BowlingWidgets.cpp  BowlingWidgets.h  CMakeLists.txt  Dockerfile  GameRecoveryManager.cpp  GameRecoveryManager.h  GameStatistics.cpp  GameStatistics.h  LaneClient.cpp  LaneClient.h  MachineFunctions.py  MachineInterface.cpp  MachineInterface.h  MainWindow.cpp  MainWindow.h  MediaManager.cpp  MediaManager.h  QuickGame.cpp  QuickGame.h  QuickGameDialog.cpp  QuickGameDialog.h  QuickStartDialog.cpp  ThreeSixNineTracker.cpp  ThreeSixNineTracker.h  active_ball_detector.py  client_main.cpp  ignore.gitignore  machine_interface.py  main.cpp  settings.ini  settings.json
